--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.49",
+    "postcss-preset-env": "^10.1.2",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
   },
