--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "chmod +x ./node_modules/.bin/next && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test:crypto": "node app/test-bsv/crypto-test.js",
@@ -42,7 +42,7 @@
     "framer-motion": "^11.0.8",
     "js-sha3": "^0.9.3",
     "lucide-react": "^0.344.0",
-    "next": "^15.0.0",
+    "next": "14.1.0",
     "next-themes": "^0.2.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
@@ -73,7 +73,7 @@
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.0",
+    "eslint-config-next": "^14.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "path-browserify": "^1.0.1",
