Correct Coupon; create and join

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,16 @@
 {
-    "name": "ntanglemint",
-    "version": 2,
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/next",
-        "config": {
-          "installCommand": "npm install --force"
-        }
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next",
+      "config": {
+        "installCommand": "npm install --force",
+        "buildCommand": "node build.js"
       }
-    ]
+    }
+  ],
+  "env": {
+    "NEXT_TELEMETRY_DISABLED": "1"
   }
+}
