--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx next build",
+    "build": "node build.js",
     "start": "next start",
     "lint": "next lint",
     "test:crypto": "node app/test-bsv/crypto-test.js",
