--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,7 @@
     }
   ],
   "env": {
-    "NEXT_TELEMETRY_DISABLED": "1"
+    "NEXT_TELEMETRY_DISABLED": "1",
+    "NODE_OPTIONS": "--max_old_space_size=4096"
   }
 }
